RESOLVED FIXED93084
[EFL] (REGRESSION 124581) : EFL 64-bit Debug bot is red and build is exiting early after 20 test crashes
https://bugs.webkit.org/show_bug.cgi?id=93084
Summary [EFL] (REGRESSION 124581) : EFL 64-bit Debug bot is red and build is exiting ...
Sudarsana Nagineni (babu)
Reported 2012-08-03 03:20:14 PDT
Build is exiting early after 20 test crashes after 124581. http://build.webkit.org/results/EFL%20Linux%2064-bit%20Debug/r124581%20%283806%29/results.html Here is the stack trace: crash log for DumpRenderTree (pid 23553): STDOUT: <empty> STDERR: ASSERTION FAILED: url.isEmpty() || isSchemeFirstChar(url[0]) STDERR: /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/Source/WebCore/platform/KURL.cpp(315) : void WebCore::checkEncodedString(const WTF::String&) STDERR: 1 0x7ffd27612712 STDERR: 2 0x7ffd27615526 WebCore::KURL::parse(WTF::String const&) STDERR: 3 0x7ffd276127f2 WebCore::KURL::KURL(WebCore::ParsedURLStringTag, WTF::String const&) STDERR: 4 0x47c3f8 DumpRenderTreeChrome::onWillSendRequest(void*, _Evas_Object*, void*) STDERR: 5 0x7ffd236984b3 evas_object_smart_callback_call STDERR: 6 0x7ffd23f0bf87 STDERR: 7 0x7ffd274ca806 WebCore::ResourceLoadNotifier::dispatchWillSendRequest(WebCore::DocumentLoader*, unsigned long, WebCore::ResourceRequest&, WebCore::ResourceResponse const&) STDERR: 8 0x7ffd274ca40c WebCore::ResourceLoadNotifier::willSendRequest(WebCore::ResourceLoader*, WebCore::ResourceRequest&, WebCore::ResourceResponse const&) STDERR: 9 0x7ffd274d11f3 WebCore::ResourceLoader::willSendRequest(WebCore::ResourceRequest&, WebCore::ResourceResponse const&) STDERR: 10 0x7ffd274beb48 WebCore::MainResourceLoader::willSendRequest(WebCore::ResourceRequest&, WebCore::ResourceResponse const&) STDERR: 11 0x7ffd274c0423 WebCore::MainResourceLoader::loadNow(WebCore::ResourceRequest&) STDERR: 12 0x7ffd274c091d WebCore::MainResourceLoader::load(WebCore::ResourceRequest const&, WebCore::SubstituteData const&) STDERR: 13 0x7ffd2748945c WebCore::DocumentLoader::startLoadingMainResource() STDERR: 14 0x7ffd274aa9fe WebCore::FrameLoader::continueLoadAfterWillSubmitForm() STDERR: 15 0x7ffd274ad533 WebCore::FrameLoader::continueLoadAfterNavigationPolicy(WebCore::ResourceRequest const&, WTF::PassRefPtr<WebCore::FormState>, bool) STDERR: 16 0x7ffd274acc5f WebCore::FrameLoader::callContinueLoadAfterNavigationPolicy(void*, WebCore::ResourceRequest const&, WTF::PassRefPtr<WebCore::FormState>, bool) STDERR: 17 0x7ffd274c3682 WebCore::PolicyCallback::call(bool) STDERR: 18 0x7ffd274c452b WebCore::PolicyChecker::continueAfterNavigationPolicy(WebCore::PolicyAction) STDERR: 19 0x7ffd23f0b6c3 STDERR: 20 0x7ffd23f0ca30 STDERR: 21 0x7ffd274c3f36 WebCore::PolicyChecker::checkNavigationPolicy(WebCore::ResourceRequest const&, WebCore::DocumentLoader*, WTF::PassRefPtr<WebCore::FormState>, void (*)(void*, WebCore::ResourceRequest const&, WTF::PassRefPtr<WebCore::FormState>, bool), void*) STDERR: 22 0x7ffd274a7139 WebCore::FrameLoader::loadWithDocumentLoader(WebCore::DocumentLoader*, WebCore::FrameLoadType, WTF::PassRefPtr<WebCore::FormState>) STDERR: 23 0x7ffd274a6b96 WebCore::FrameLoader::load(WebCore::DocumentLoader*) STDERR: 24 0x7ffd274a65ad WebCore::FrameLoader::load(WebCore::ResourceRequest const&, WebCore::SubstituteData const&, bool) STDERR: 25 0x7ffd274a63d3 WebCore::FrameLoader::load(WebCore::ResourceRequest const&, bool) STDERR: 26 0x7ffd23f19e87 ewk_frame_uri_set STDERR: 27 0x7ffd23f4323b ewk_view_uri_set STDERR: 28 0x4786de STDERR: 29 0x4788b0 STDERR: 30 0x478f09 main STDERR: 31 0x7ffd2209176d __libc_start_main
Attachments
Patch (2.19 KB, patch)
2012-08-03 03:31 PDT, Sudarsana Nagineni (babu)
no flags
Sudarsana Nagineni (babu)
Comment 1 2012-08-03 03:31:35 PDT
Thiago Marcos P. Santos
Comment 2 2012-08-03 03:52:39 PDT
Comment on attachment 156308 [details] Patch LGTM. Thanks!
Balazs Kelemen
Comment 3 2012-08-03 04:18:22 PDT
Sorry, I forgot about this part. Thanks for the fix!
Csaba Osztrogonác
Comment 4 2012-08-03 04:21:44 PDT
Comment on attachment 156308 [details] Patch rs=me
Balazs Kelemen
Comment 5 2012-08-03 04:23:23 PDT
Comment on attachment 156308 [details] Patch Clearing flags on attachment: 156308 Committed r124595: <http://trac.webkit.org/changeset/124595>
Balazs Kelemen
Comment 6 2012-08-03 04:23:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.