[EFL] (REGRESSION 124581) : EFL 64-bit Debug bot is red and build is exiting early after 20 test crashes https://bugs.webkit.org/show_bug.cgi?id=93084

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-08-03
Reviewed by Csaba Osztrogonác.

Fix regression introduced in r124581.

* DumpRenderTree/efl/DumpRenderTree.cpp:
(getFinalTestURL): Convert the path into a full file URL.
(runTest):

Canonical link: https://commits.webkit.org/110941@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124595 268f45cc-cd09-0410-ab3c-d52691b4dbfc